Bug 1670151 Part 1 - Rename ComputeInlineSizeFromAspectRatio() to ComputeISizeValueFromAspectRatio(). r=layout-reviewers,boris

This renaming is to match the existing `ComputeISizeValue()` and
`ComputeBSizeValue()` APIs. Also, rename the related local variables for brevity
and improve the comments.

Differential Revision: https://phabricator.services.mozilla.com/D212715